添加编辑产品功能以及前后端模型验证

--- a/SportStore/SportsStore.Domain/SportsStore.Domain.csproj
+++ b/SportStore/SportsStore.Domain/SportsStore.Domain.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Entities\Cart.cs" />
     <Compile Include="Entities\Product.cs" />
     <Compile Include="Entities\ShippingDetails.cs" />
+    <Compile Include="Inital\EfDbInitializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
