--- a/SportStore/SportsStore.WebUI/Web.config
+++ b/SportStore/SportsStore.WebUI/Web.config
@@ -10,14 +10,14 @@
 
   </configSections>
   <connectionStrings>
-    <add name="EFDbContext" connectionString="Data Source=localhost;Initial Catalog=SportsStore;user id=sa;password=xiongyi1984;" providerName="System.Data.SqlClient" />
+    <add name="EFDbContext" connectionString="Data Source=localhost\sqlexpress;Initial Catalog=SportsStore;user id=sa;password=xiongyi1984;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="Email.WriteAsFile" value="true"/>
+    <add key="Email.WriteAsFile" value="true" />
   </appSettings>
   <system.web>
     <globalization culture="zh-CN" uiCulture="zh-CN" />
