--- a/SportStore/SportsStore.Domain/App.config
+++ b/SportStore/SportsStore.Domain/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="EFDbContext" connectionString="Data Source=localhost\sqlexpress;Initial Catalog=SportsStore;user id=sa;password=xiongyi1984;" providerName="System.Data.SqlClient" />
+    <add name="EFDbContext" connectionString="Data Source=localhost;Initial Catalog=SportsStore;user id=sa;password=xiongyi1984;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
