--- a/SportStore/SportsStore.WebUI/Web.config
+++ b/SportStore/SportsStore.WebUI/Web.config
@@ -10,7 +10,7 @@
 
   </configSections>
   <connectionStrings>
-    <add name="EFDbContext" connectionString="Data Source=localhost\sqlexpress;Initial Catalog=SportsStore;user id=sa;password=xiongyi1984;" providerName="System.Data.SqlClient" />
+    <add name="EFDbContext" connectionString="Data Source=localhost;Initial Catalog=SportsStore;user id=sa;password=xiongyi1984;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -21,6 +21,13 @@
   </appSettings>
   <system.web>
     <globalization culture="zh-CN" uiCulture="zh-CN" />
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/Login" timeout="2880">
+        <credentials passwordFormat="Clear">
+          <user name="admin" password="secret"/>
+        </credentials>
+      </forms>
+    </authentication>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
