--- a/SportStore/SportsStore.UnitTests/SportsStore.UnitTests.csproj
+++ b/SportStore/SportsStore.UnitTests/SportsStore.UnitTests.csproj
@@ -108,6 +108,7 @@
     <Compile Include="AdminTests.cs" />
     <Compile Include="App_Start\Ninject.Web.Common.cs" />
     <Compile Include="CartTests.cs" />
+    <Compile Include="ImageTests.cs" />
     <Compile Include="ProductListPageTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
