--- a/SportStore/SportsStore.WebUI/Web.config
+++ b/SportStore/SportsStore.WebUI/Web.config
@@ -10,7 +10,7 @@
 
   </configSections>
   <connectionStrings>
-    <add name="EFDbContext" connectionString="Data Source=localhost;Initial Catalog=SportsStore;user id=sa;password=xiongyi1984;" providerName="System.Data.SqlClient" />
+    <add name="EFDbContext" connectionString="Data Source=localhost\sqlexpress;Initial Catalog=SportsStore;user id=sa;password=xiongyi1984;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
