--- a/SportStore/SportsStore.WebUI/SportsStore.WebUI.csproj
+++ b/SportStore/SportsStore.WebUI/SportsStore.WebUI.csproj
@@ -131,6 +131,8 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <None Include="Properties\PublishProfiles\SportsStore-Default - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\SportsStore-Default - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -140,7 +142,9 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Views\Product\_ViewStart.cshtml" />
   </ItemGroup>
   <ItemGroup>
