添加一些注释

--- a/ClientFeatures/ClientFeatures/Web.config
+++ b/ClientFeatures/ClientFeatures/Web.config
@@ -11,6 +11,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <!--设置debug="false"以后，页面请求捆绑包会自动连接到.min文件，减少请求次数以及请求文件大小-->
     <compilation debug="false" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
